# MendeleyToNotion

./: README.md  pyproject.toml
globalStore/: constants.py
lib/: port_utils.py
mendeley/: auth.py  models.py  session.py
src/: mendeleyToNotion.py
