[project]
name = "mendeley"
version = "0.1"
description = "Objects, abstractions, and useful calculations relating to currency, as well as several quote-getting implementations."
authors = [
  { name = "Mendeley", email = "notanemail@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
"arrow",
"future>=0.14.3",
"jupyterlab",
"jupytext",
"memoized-property",
"notion-client",
"oauthlib",
"requests-oauthlib",
"tqdm",
"PyYAML==3.11",
"contextlib2==0.4.0",
"mock==1.0.1",
"py==1.4.26",
"pytest==2.6.4",
"python-dateutil==2.4.0",
"requests==2.5.1",
"six==1.9.0",
"vcrpy==1.2.0",
"wrapt==1.10.2",
"loguru"

]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
